# pipeline

./: .buildinfo  .dockerignore  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  Contributors.rst  Dockerfile  LICENSE.md  apisummary.html  authors.rst  basics.html  classes.html  conftest.py  dependencies.html  environment.yml  environment_vlass2026.yml  genindex.html  index.html  interface.html  latex.html  modular.html  objects.inv  pipe1669.yaml  pipeline.yaml  pipeline_docs.yaml  py-modindex.html  pyproject.toml  pytest.ini  releases.html  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_exp.txt  requirements_vlass.txt  runsetup  runsetup3  search.html  searchindex.js  (+4 more)
.github/: copilot-instructions.md  pull_request_template.md
_apidoc/: modules.html  pipeline.domain.html  pipeline.extern.html  pipeline.h.cli.html  pipeline.h.heuristics.html  pipeline.h.html  pipeline.h.tasks.applycal.html  pipeline.h.tasks.common.displays.html  pipeline.h.tasks.common.html  pipeline.h.tasks.exportdata.html  pipeline.h.tasks.flagging.html  pipeline.h.tasks.html  pipeline.h.tasks.importdata.html  pipeline.h.tasks.mstransform.html  pipeline.h.tasks.restoredata.html  pipeline.h.tasks.tsyscal.html  pipeline.h.tasks.tsysflag.html  pipeline.h.templates.html  pipeline.hif.cli.html  pipeline.hif.heuristics.auto_selfcal.html  pipeline.hif.heuristics.html  pipeline.hif.html  pipeline.hif.tasks.analyzealpha.html  pipeline.hif.tasks.antpos.html  pipeline.hif.tasks.applycal.html  pipeline.hif.tasks.bandpass.html  pipeline.hif.tasks.checkproductsize.html  pipeline.hif.tasks.common.html  pipeline.hif.tasks.correctedampflag.html  pipeline.hif.tasks.editimlist.html  pipeline.hif.tasks.findcont.html  pipeline.hif.tasks.fluxscale.html  pipeline.hif.tasks.gaincal.html  pipeline.hif.tasks.html  pipeline.hif.tasks.lowgainflag.html  pipeline.hif.tasks.makecutoutimages.html  pipeline.hif.tasks.makeimages.html  pipeline.hif.tasks.makeimlist.html  pipeline.hif.tasks.makermsimages.html  pipeline.hif.tasks.mstransform.html  (+116 more)
_automodapi/: pipeline.domain.Antenna.html  pipeline.domain.AntennaArray.html  pipeline.domain.DataDescription.html  pipeline.domain.DataTable.html  pipeline.domain.DataType.html  pipeline.domain.Field.html  pipeline.domain.FluxMeasurement.html  pipeline.domain.MeasurementSet.html  pipeline.domain.ObservingRun.html  pipeline.domain.Polarization.html  pipeline.domain.Scan.html  pipeline.domain.Source.html  pipeline.domain.SpectralWindow.html  pipeline.domain.SpectralWindowWithChannelSelection.html  pipeline.domain.State.html  pipeline.h.tasks.Applycal.html  pipeline.h.tasks.ExportData.html  pipeline.h.tasks.ImportData.html  pipeline.h.tasks.MsSplit.html  pipeline.h.tasks.RestoreData.html  pipeline.h.tasks.Tsyscal.html  pipeline.h.tasks.Tsysflag.html  pipeline.hif.tasks.Analyzealpha.html  pipeline.hif.tasks.Antpos.html  pipeline.hif.tasks.Bandpass.html  pipeline.hif.tasks.BandpassMode.html  pipeline.hif.tasks.ChannelBandpass.html  pipeline.hif.tasks.CheckProductSize.html  pipeline.hif.tasks.Correctedampflag.html  pipeline.hif.tasks.Editimlist.html  pipeline.hif.tasks.FindCont.html  pipeline.hif.tasks.Fluxscale.html  pipeline.hif.tasks.GSplineGaincal.html  pipeline.hif.tasks.GTypeGaincal.html  pipeline.hif.tasks.Gaincal.html  pipeline.hif.tasks.GaincalMode.html  pipeline.hif.tasks.IFApplycal.html  pipeline.hif.tasks.KTypeGaincal.html  pipeline.hif.tasks.Lowgainflag.html  pipeline.hif.tasks.MakeImList.html  (+178 more)
_autosummary/: pipeline.Any.html  pipeline.Context.html  pipeline.Pipeline.html  pipeline.cli.get_pipeline_task_with_name.html  pipeline.cli.h_applycal.html  pipeline.cli.h_export_calstate.html  pipeline.cli.h_exportdata.html  pipeline.cli.h_import_calstate.html  pipeline.cli.h_importdata.html  pipeline.cli.h_init.html  pipeline.cli.h_mssplit.html  pipeline.cli.h_restoredata.html  pipeline.cli.h_resume.html  pipeline.cli.h_save.html  pipeline.cli.h_show_calstate.html  pipeline.cli.h_tsyscal.html  pipeline.cli.h_weblog.html  pipeline.cli.hif_analyzealpha.html  pipeline.cli.hif_antpos.html  pipeline.cli.hif_applycal.html  pipeline.cli.hif_bandpass.html  pipeline.cli.hif_checkproductsize.html  pipeline.cli.hif_correctedampflag.html  pipeline.cli.hif_editimlist.html  pipeline.cli.hif_findcont.html  pipeline.cli.hif_gaincal.html  pipeline.cli.hif_lowgainflag.html  pipeline.cli.hif_makecutoutimages.html  pipeline.cli.hif_makeimages.html  pipeline.cli.hif_makeimlist.html  pipeline.cli.hif_makermsimages.html  pipeline.cli.hif_mstransform.html  pipeline.cli.hif_rawflagchans.html  pipeline.cli.hif_refant.html  pipeline.cli.hif_selfcal.html  pipeline.cli.hif_setjy.html  pipeline.cli.hif_setmodels.html  pipeline.cli.hif_transformimagedata.html  pipeline.cli.hif_uvcontsub.html  pipeline.cli.hifa_antpos.html  (+6234 more)
_images/: inheritance-00bd2cc38a49f255214827bd1ee7b261e1d4bfee.png.map  inheritance-01e9c970594ba3746021688febde7efea7bbacf7.png.map  inheritance-0d4caf30c95613fd768f3d7f6aa414004819a2f5.png.map  inheritance-103f985ef399c5c1ea7590a32e93f591b0699e07.png.map  inheritance-185961341670abf31743cc090c90aceda1b2428c.png.map  inheritance-1be30b6023f9e6d2406554417f935f89a5652d6b.png.map  inheritance-20e0bb6cf60b755da22a988dcc2bb41a5e6459d1.png.map  inheritance-238bc9732b072b71c7e03198ca19e6a383ae4785.png.map  inheritance-23abc6f22691301b86cd384c36fd0ad2aa941a42.png.map  inheritance-262219c70ecb04c470d56a56d9e63cdaeab8805f.png.map  inheritance-38cff4ed1c4eeec645ce71efcce1aff769ff6447.png.map  inheritance-3ff9879ecd754bdcd3bebb22a7d9deb0be929b25.png.map  inheritance-48d78c05507d3854f7cdaa44161d7e681e6b8e58.png.map  inheritance-4a55c202c3d190991f8f39a1e0d4ba1d0498bb59.png.map  inheritance-4da01c6c98474f9c9e68986b9e745450a1e496a5.png.map  inheritance-4fdc6dd3abe0df4dc8040867ffd5398b52b5da9a.png.map  inheritance-5308dd6adeb0a5de6c9d7eb39918c29423198157.png.map  inheritance-59d17b8b7bc01668ed68e22620507b0e1eb7e24c.png.map  inheritance-5ace67223c517197666226a3cc73b6a88b1b95b8.png.map  inheritance-608975615651fc7275cd0f7aa3c1118c180f2c0c.png.map  (+32 more)
_modules/: abc.html  (+26 more)
(+24987 files in other folders)
