[build-system]
requires = [
    "setuptools>=64.0",
    "packaging>=22.0.0",
    "wheel",
    "csscompressor==0.9.5",
    "jsmin==3.0.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "Pipeline"
description = "Pipeline"
requires-python = ">= 3.12"
dynamic = ["version", "dependencies", "optional-dependencies"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = { text = "LGPL-3.0-or-later" }
authors = [
    { name = "Associated Universities, Inc." },
    { name = "European Southern Observatory" },
    { name = "National Astronomical Observatory of Japan" },
]
keywords = ["astronomy", "pipeline", "ALMA", "VLA", "radio-astronomy"]

[project.urls]
Documentation = "https://almascience.nrao.edu/processing/science-pipeline"
Repository = "https://open-bitbucket.nrao.edu/projects/PIPE/repos/pipeline"
"Bug Tracker" = "https://open-jira.nrao.edu"
License = "https://www.gnu.org/licenses/lgpl-3.0.html"

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.setuptools.package-data]
"*" = [
    '*.css',
    '*.js',
    '*.html',
    '*.mak',
    '*.mako',  # Templates/web
    '*.gif',
    '*.jpg',
    '*.png',
    '*.svg',   # Images
    '*.eot',
    '*.otf',
    '*.ttf',
    '*.woff',
    '*.woff2', # Fonts
    '*.txt',
    '*.xml',
    '*.yaml',  # Data files
    '*.egg',
    'version', # Build/version files
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements_dev.txt"] }
optional-dependencies.docs = { file = ["requirements_docs.txt"] }
optional-dependencies.exp = { file = ["requirements_exp.txt"] }
optional-dependencies.devdocs = { file = [
    "requirements_dev.txt",
    "requirements_docs.txt",
] }
optional-dependencies.all = { file = [
    "requirements_dev.txt",
    "requirements_docs.txt",
    "requirements_exp.txt",
] }

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9", # pycodestyle errors
    "F",  # pyflakes
    "D",  # pydocstyle
    "I",  # isort
]
preview = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 140
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
exclude = ["*.pyi"]
docstring-code-format = true
docstring-code-line-length = 140
quote-style = "single"
skip-magic-trailing-comma = false

[tool.coverage.run]
omit = ['pipeline/run*pipeline.py', 'tests/*']
branch = true                                  # Same as --cov-branch
source = ['pipeline']                          # Same as --cov=pipeline
parallel = true                                # Enable parallel coverage collection for xdist
concurrency = ["multiprocessing", "thread"]    # Handle xdist workers properly

[tool.coverage.report]
fail_under = 10 # Set the minimum coverage percentage required
precision = 2 # Add decimal precision
show_missing = true
skip_covered = false
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:',
    'if __name__ == "__main__":',
    'from .* import .*',
    'import .*',
    'raise NotImplementedError',
    'pass',
    '@(abc\\.)?abstractmethod',
]

[tool.pytest.ini_options]
markers = [
    "regression: regression test",
    "alma: alma test",
    "nobeyama: nobeyama test",
    "vla: vla test (does not include vlass)",
    "vlass: vlass test",
    "fast: shorter-running test",
    "slow: longer-running test",
    "twelve: 12m ALMA test",
    "seven: 7m ALMA test",
    "sd: single dish test",
    "interferometry: interferometry test",
    "component: component tests",
    "importdata: importdata task(s)",
    "selfcal: selfcal task(s)",
    "makeimages: makeimages task(s)",
    "mpi: test recommended for an MPI-enabled CASA session; use -m mpi or -m 'not mpi' to control execution",
    "unit: unit test",
]
addopts = [
    "-ra", # show extra test summary info for (a)ll except passed
    "-v",  # verbose output
]
junit_family = "legacy"

# Pixi Configuration

[tool.pixi.workspace]
# 'nodefaults' is not needed as Pixi does not implicitly add the defaults (Anaconda) channel
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

# Common dependencies (shared by ALL environments via solve-groups)

[tool.pixi.dependencies]
conda-ecosystem-user-package-isolation = "*"
ipython = "*"
pip = ">=23.0"
# Note: openmpi="*" is sufficient for non-gpu builds
# But casatools+hpg builds are linked against C++ MPI bindings.
openmpi-mpicxx = ">=5.0"
mpi4py = ">=3.1.5"
certifi = "*"
poppler = "*"            # required by Pipeline
imagemagick = "*"        # required by Pipeline (Jupyter notebook → RST conversion)


[tool.pixi.pypi-dependencies]
# Install the current project in editable mode
# This picks up dependencies from requirements.txt, which is still
# used for monolithic installations.
# Also install the 'dev' extras to ensure development dependencies are available.
pipeline = { path = ".", editable = true, extras = ["dev"] }
# https://casadocs.readthedocs.io/en/stable/notebooks/introduction.html#Known-Issues
protobuf = "==3.20.*" # casaplotms still requires ver<=3.20
grpcio = ">=1.62"
six = ">=1.17"

casampi = { version = ">=0.5.5", index = "https://casa-pip.nrao.edu/repository/pypi-group/simple" }
casaplotms = { version = ">=2.5.3", index = "https://casa-pip.nrao.edu/repository/pypi-group/simple" }
casaplotserver = { version = ">=1.8.2", index = "https://casa-pip.nrao.edu/repository/pypi-group/simple" }
casatasks = { version = ">=6.7.4.2", index = "https://casa-pip.nrao.edu/repository/pypi-group/simple" }
casatools = { version = ">=6.7.4.2", index = "https://casa-pip.nrao.edu/repository/pypi-group/simple" }

[tool.pixi.system-requirements]
# Sets the minimum macOS runtime to 15.0 (floor, not a build filter).
# Older wheels (e.g., macOS 14.0) are still selected when no newer build exists,
# as macOS binaries are forward-compatible.
macos = "15.0"

[tool.pixi.tasks]
# Run unit tests with coverage
test-unit = """
cd $INIT_CWD && \
PYTHONNOUSERSITE=1 python -m pytest \
  -n logical --max-worker-restart=1 \
  --junitxml=unit-results.xml \
  --cov=pipeline --cov-append --cov-report=html --cov-report=xml \
  $PIXI_PROJECT_ROOT/pipeline/
"""

# Run fast regression tests in a serial CASA session (xdist, no mpi)
test-regression = """
cd $INIT_CWD && \
OMP_NUM_THREADS=1 OPENBLAS_NUM_THREADS=1 \
  python -m pytest -n 12 --dist worksteal \
  -m \"not mpi\" \
  --junitxml=regression-results.xml \
  --cov=pipeline --cov-append --cov-report=html --cov-report=xml \
  $PIXI_PROJECT_ROOT/tests/regression/fast/
"""

# Run a single small ALMA-IF fast regression test (pltest1)
test-pltest1 = """
cd $INIT_CWD && \
OMP_NUM_THREADS=1 OPENBLAS_NUM_THREADS=1 \
  python -m casashell --nogui --log2term \
  -c "import pytest; pytest.main(['$PIXI_PROJECT_ROOT/tests/regression/fast/alma_if_fast_test.py::test_uid___A002_Xc46ab2_X15ae_repSPW_spw16_17_small__PPR__regression'])"
"""

# Fetch/update CASA runtime data
fetch-casarundata = "python -c 'import casatools'"

# --------------------------------------------------------------------------
# Feature: CASA ver6.7.4 (PL2026-CASA branch) — Python 3.12
# casatools/casatasks/numpy etc. will be installed as indirect dependencies
# of casashell; no need to specify them here.
# --------------------------------------------------------------------------

[tool.pixi.feature.casa674-py312]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.feature.casa674-py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.casa674-py312.pypi-dependencies]
casashell = { version = "==6.7.4.*", index = "https://casa-pip.nrao.edu/repository/pypi-group/simple" }

# --------------------------------------------------------------------------
# Feature: CASA ver6.7.5.* (latest release branch) — Python 3.12/3.13
# --------------------------------------------------------------------------

[tool.pixi.feature.casa675-py312]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.feature.casa675-py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.casa675-py312.pypi-dependencies]
casashell = { version = "==6.7.5.*", index = "https://casa-pip.nrao.edu/repository/pypi-group/simple" }

[tool.pixi.feature.casa675-py313]
# Note: bdsf is not available on osx-arm64 for cp313; skipped via requirements.txt marker
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.feature.casa675-py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.casa675-py313.pypi-dependencies]
casashell = { version = "==6.7.5.*", index = "https://casa-pip.nrao.edu/repository/pypi-group/simple" }

# --------------------------------------------------------------------------
# Feature: CASA ver6.7.6 (master branch) — Python 3.12/3.13
# --------------------------------------------------------------------------

[tool.pixi.feature.casa676-py312]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.feature.casa676-py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.casa676-py312.pypi-dependencies]
casashell = { version = "==6.7.6.*", index = "https://casa-pip.nrao.edu/repository/pypi-group/simple" }

[tool.pixi.feature.casa676-py313]
# Note: bdsf is not available on osx-arm64 for cp313; skipped via requirements.txt marker
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.feature.casa676-py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.casa676-py313.pypi-dependencies]
casashell = { version = "==6.7.6.*", index = "https://casa-pip.nrao.edu/repository/pypi-group/simple" }

# --------------------------------------------------------------------------
# Feature: Docs build extras
# --------------------------------------------------------------------------

[tool.pixi.feature.docs]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.feature.docs.dependencies]
python = "3.12.*"
pandoc = "*"      # required by nbsphinx (Jupyter notebook → RST conversion)

[tool.pixi.feature.docs.pypi-dependencies]
pipeline = { path = ".", editable = true, extras = ["docs"] }

[tool.pixi.feature.docs.tasks]
# Build docs (full clean rebuild)
build-docs = { cmd = "make html_docs", cwd = "docs" }
# Incremental docs build — reuses doctrees and autosummary stubs (much faster for dev)
build-docs-fast = { cmd = "make html_fast", cwd = "docs" }
# Build PDF (LaTeX) docs
build-pdf = { cmd = "make latexpdf", cwd = "docs" }

[tool.pixi.environments]
# default + docs share a solve-group so the docs build always uses the same locked deps as the default runtime
default = { features = ["casa674-py312"], solve-group = "casa674-py312" }
docs = { features = ["docs"], solve-group = "casa674-py312" }
casa674-py312 = { features = ["casa674-py312"] }
casa675-py312 = { features = ["casa675-py312"] }
casa675-py313 = { features = ["casa675-py313"] }
casa676-py312 = { features = ["casa676-py312"] }
casa676-py313 = { features = ["casa676-py313"] }
